--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -331,10 +331,10 @@
 
             <div class="art-piece">
               <a href="project4.html"> </a>
-                <img src="nejin/10nei.jpg" alt="Nejin">
+                <img src="nejin/10nei.jpg" alt="Neijin">
                 <div>
                   <a href="project4.html">
-                    <h3 class="project-title">Nejin</h3>
+                    <h3 class="project-title">Neijin</h3>
                   </a>
                 </div>
             </div>
@@ -342,10 +342,10 @@
 
           <div class="art-piece">
               <a href="project5.html"> </a>
-                <img src="Chronica/5chr.jpg" alt="Chronoca">
+                <img src="Chronica/5chr.jpg" alt="Chronica">
                 <div>
                   <a href="project5.html">
-                    <h3 class="project-title">Chronoca</h3>
+                    <h3 class="project-title">Chronica</h3>
                   </a>
                 </div>
             </div>
@@ -364,10 +364,10 @@
 
           <div class="art-piece">
               <a href="project7.html"> </a>
-                <img src="Shaqaq/Shaqaq1.jpg" alt="Shaqaq">
+                <img src="Shaqaq/Shaqaq1.jpg" alt="Sheqaq">
                 <div>
                   <a href="project7.html">
-                    <h3 class="project-title">Shaqaq</h3>
+                    <h3 class="project-title">Sheqaq</h3>
                   </a>
                 </div>
           </div>
