--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -320,7 +320,7 @@
 
             <div class="art-piece">
               <a href="project3.html"> </a>
-                <img src="Sodat%20/1so.jpg" alt="Sodat">
+                <img src="Sodat/1so.jpg" alt="Sodat">
                 <div>
                   <a href="project3.html">
                     <h3 class="project-title">Sodat</h3>
@@ -448,20 +448,24 @@
         <div style="margin-top: 30px; text-align: center;">
             <h3 style="color: #ffcc00; margin-bottom: 20px; font-size: 1.5em; letter-spacing: 1px; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);">Skills & Interests</h3>
             <ul style="list-style-type: none; padding: 0; color: #f0f0f0; font-size: 1.1em; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
-                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s; animation: bounce 1.5s infinite;">
-                    <i class="fas fa-paint-brush" style="color: #ffcc00;"></i> <span>Contemporary Art</span>
+                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s;">
+                    <i class="fas fa-palette" style="color: #ffcc00;"></i> <span>Visual Art</span>
                 </li>
-                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s; animation: bounce 1.5s infinite;">
-                    <i class="fas fa-camera-retro" style="color: #ffcc00;"></i> <span>Photography</span>
+                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s;">
+                    <i class="fas fa-brush" style="color: #ffcc00;"></i> <span>Contemporary Art</span>
                 </li>
-                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s; animation: bounce 1.5s infinite;">
-                    <i class="fas fa-pen-fancy" style="color: #ffcc00;"></i> <span>Art Critique & Writing</span>
+                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s;">
+                    <i class="fas fa-bullhorn" style="color: #ffcc00;"></i> <span>Activist Art</span>
                 </li>
-                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s; animation: bounce 1.5s infinite;">
-                    <i class="fas fa-globe" style="color: #ffcc00;"></i> <span>Cultural Studies</span>
+                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s;">
+                    <i class="fas fa-book-reader" style="color: #ffcc00;"></i> <span>Critical Theory</span>
+                </li>
+                <li style="display: flex; align-items: center; gap: 10px; transition: transform 0.3s;">
+                    <i class="fas fa-history" style="color: #ffcc00;"></i> <span>Art History</span>
                 </li>
             </ul>
         </div>
+
     </div>
 </div>
 
