--- a/project3.html
+++ b/project3.html
@@ -170,12 +170,12 @@
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
-            <img src="Sodat%20/1so.jpg" alt="Sculpture 1">
-            <img src="Sodat%20/2so.jpeg" alt="Sculpture 1">
-            <img src="Sodat%20/3so.jpg" alt="Sculpture 1">
-            <img src="Sodat%20/4so.jpg" alt="Sculpture 1">
-            <img src="Sodat%20/5so.jpg" alt="Sculpture 1">
-            <img src="Sodat%20/6so.jpg" alt="Sculpture 1">
+            <img src="Sodat/1so.jpg" alt="Sculpture 1">
+            <img src="Sodat/2so.jpeg" alt="Sculpture 1">
+            <img src="Sodat/3so.jpg" alt="Sculpture 1">
+            <img src="Sodat/4so.jpg" alt="Sculpture 1">
+            <img src="Sodat/5so.jpg" alt="Sculpture 1">
+            <img src="Sodat/6so.jpg" alt="Sculpture 1">
 
         </div>
         <div id="description">
