--- a/project7.html
+++ b/project7.html
@@ -160,7 +160,7 @@
 </head>
 <body>
     <header>
-        <h1>Shaqaq</h1>
+        <h1>Sheqaq</h1>
         <p>Discover the story behind the artwork</p>
     </header>
 
