--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -435,7 +435,10 @@
     <!-- Introduction Text -->
 <!-- Introduction Text with Spacing -->
     <p style="color: #eaeaea; font-size: 1.2em; line-height: 1.6; max-width: 700px; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); background: linear-gradient(135deg, #ffcc00, #ff6666); -webkit-background-clip: text; color: transparent; margin-top: 40px;">
-        Hello! I'm [Your Name], a passionate artist dedicated to exploring the intersection of [your art focus, e.g., culture, environment, and society] through visual expression. My work often reflects [your artistic themes or motivations], aiming to evoke thought and inspire meaningful conversations.
+
+For me, art is not merely a reflection of reality; it is a tool for challenging and redefining social structures. I believe that art has the power to disrupt existing orders and provoke critical thinking and introspection in its audience. In pursuit of uncensored and critical awareness, I am constantly engaged in research and the creation of works that examine power dynamics and their social implications.
+
+As an artist-researcher, my projects—from field studies to artistic creations—strive to amplify the voices of overlooked aspects of society and culture, particularly in contexts where official narratives aim to restrict the representation of reality. My goal is to invite audiences to a deeper and more nuanced understanding of societal realities by exploring cultural discourses and social interactions.
     </p>
 
 </div>
